# Spell-Perk-Item-Distributor

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  SpellDistribution.sln  SpellDistribution.vcxproj.filters  SpellPerkItemDistributor.sln  SpellPerkItemDistributor.vcxproj  SpellPerkItemDistributor.vcxproj.filters  exports.def  vc-fileutils.settings  vcpkg.json
.github/workflows/: main.yml  maintenance.yml
SPID/: .clang-format  CMakeLists.txt  ProjectGen.py  vcpkg.json
SPID/Testing/: DeathDistributionTests.h  DistributionTests.h  OutfitManagerTests.h  Testing.h  TestsHelpers.h
SPID/cmake/: headerlist.cmake  sourcelist.cmake
SPID/include/: Bitmasks.h  Cache.h  Configs.h  ConfigsCoding.h  DeathDistribution.h  Defs.h  DependencyResolver.h  Distribute.h  DistributeManager.h  DistributePCLevelMult.h  ExclusionGroups.h  ExclusiveGroups.h  Expressions.h  Filters.h  FixedDataINIConfigDecoder.h  FormData.h  FreeformDataINIConfigDecoder.h  Hooking.h  LinkedDistribution.h  LogBuffer.h  LogHeader.h  LookupConfigs.h  LookupFilters.h  LookupForms.h  LookupNPC.h  OptionsINIConfigDecoder.h  OutfitManager.h  OutfitManagerTests.h  PCH.h  PCLevelMultManager.h  Parser.h  SectionedDataINIConfigDecoder.h  Testing.h
SPID/src/: Cache.cpp  Cache.h  DeathDistribution.cpp  Defs.h  (+35 more)
SPIDFormatter/: CMakeLists.txt  README.md
SPIDFormatter/src/: main.cpp  main.h
cmake/: common.cmake
include/: enum.h  main.h  version.h
resources/: SPID Complete Reference.txt
src/: Defs.h  Distributor.cpp  Distributor.h  PCH.h  main.cpp  processing.cpp  processing.h
(+21 files in other folders)
